Replace CachedThreadPool in ZuliaIndex with named virtual threads for shard-level operations. Java 24+ eliminates virtual thread pinning on synchronized monitors used by Lucene's IndexWriter so it is now recommended.